--- a/blocks/card/__icon/card__icon.css
+++ b/blocks/card/__icon/card__icon.css
@@ -2,8 +2,15 @@
   display: flex;
   align-items: stretch;
   width: 22px;
+  height: 22px;
   margin-right: 20px;
   background: none;
+  background-image: url(../../../images/Group.svg);
+  background-repeat: no-repeat;
   padding: 0;
   border: none;
+}
+
+.card__icon:active {
+  background-image: url(../../../images/Union.svg);
 }
