--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,6 +8,10 @@
   height: 40px;
   transform: rotate(45deg);
   background: none;
+  background-image: url(../../../images/add-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px 40px;
   border: none;
   padding: 0;
 }
@@ -17,6 +21,8 @@
     top: -37px;
     right: 0;
     width: 25px;
+    height: 25px;
+    background-size: 25px 25px;
   }
 }
 
