--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,4 +1,5 @@
 .profile__subtitle {
+  min-width: 336px;
   font-size: 18px;
   line-height: 18px;
   font-weight: 400;
@@ -11,8 +12,9 @@
 
 @media screen and (max-width: 928px) {
   .profile__subtitle {
+    min-width: 282px;
     font-size: 14px;
-    line-height: 14px;
-    margin-top: 14px;
+    margin-top: 10px;
+    text-align: center;
   }
 }
