--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -11,7 +11,7 @@
   outline: none;
 }
 
-.popup__field:nth-child(2) {
+.popup__field:nth-of-type(2)  {
   margin-bottom: 48px;
 }
 
@@ -20,7 +20,7 @@
     width: 238px;
   }
 
-  .popup__field:nth-child(2) {
+  .popup__field:nth-of-type(2)  {
     margin-bottom: 45px;
   }
 }
