--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,6 +13,7 @@
   background-position: center;
   margin-right: 0;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 928px) {
