--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -11,6 +11,7 @@
 
 @media screen and (max-width: 928px) {
   .profile__title {
+    max-width: 220px;
     font-size: 27px;
     margin-left: 25px;
   }
