--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  position: relative;
+  position: absolute;
   max-width: 430px;
   width: 100%;
   min-height: 330px;
@@ -21,5 +21,4 @@
     min-height: 322px;
   }
 }
-
 
