--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,9 +1,9 @@
 .card__image {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
+  height: 282px;
+  width: 282px;
   object-fit: cover;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 760px) {
