--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,15 @@
 .popup {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.4s;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, .5);
 }
+
