--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__field {
+.popup__input {
   width: 358px;
   padding: 0 0 10px;
   border: none;
@@ -7,20 +7,11 @@
   font-size: 14px;
   line-height: 14px;
   font-weight: 400;
-  margin-bottom: 30px;
   outline: none;
 }
 
-.popup__field:nth-of-type(2)  {
-  margin-bottom: 48px;
-}
-
 @media screen and (max-width: 600px) {
-  .popup__field {
+  .popup__input {
     width: 238px;
-  }
-
-  .popup__field:nth-of-type(2)  {
-    margin-bottom: 45px;
   }
 }
