--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -13,6 +13,7 @@
   margin: 0;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  cursor: default;
 }
 
 @media screen and (max-width: 600px) {
