--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  flex: 0 0 auto;
   max-width: 880px;
   width: 100%;
   color: #545454;
@@ -15,4 +16,5 @@
     max-width: 260px;
   }
 }
+
 
