--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 
 @import url(../blocks/button-hover/button-hover.css);
 
+@import url(../blocks/content/content.css);
 @import url(../blocks/content/__profile/content__profile.css);
 @import url(../blocks/content/__cards/content__cards.css);
 
