--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,9 +10,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  z-index: -5;
 }
-
-
-
