--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,6 @@
   left: 0;
   visibility: hidden;
   opacity: 0;
-  transition: 0.4s;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -13,4 +12,5 @@
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
   z-index: -5;
+  /* transition: 0.4s; */
 }
