--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,7 +10,6 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  cursor: pointer;
   z-index: -5;
-  /* transition: 0.4s; */
+  transition: 0.4s;
 }
