--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,7 +5,7 @@
   background: none;
   display: flex;
   align-items: stretch;
-  background-image: url(../../../images/Edit\ Button.svg);
+  background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   padding: 0;
   border: none;
