--- a/src/blocks/card/__icon/card__icon.css
+++ b/src/blocks/card/__icon/card__icon.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: stretch;
   width: 22px;
-  height: 22px;
-  margin-right: 20px;
+  width: 100%;
+  height: 19px;
   background: none;
   background-image: url(../../../images/Group.svg);
   background-repeat: no-repeat;
