--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,7 @@
 .profile__avatar {
-  max-width: 120px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  border-radius: 50%;
   margin: 0;
+  border-radius: 50%;
 }
-
-
